crates/floe-hunks/tests/snapshots/e2e__pr0006_cross_file.snap
---
source: crates/adr-hunks/tests/e2e.rs
expression: hunks
---
[
  {
    "id": "[id]",
    "kind": {
      "kind": "call",
      "added_edges": [
        6,
        9
      ],
      "removed_edges": [
        6
      ]
    },
    "provenance": {
      "source": "floe-hunks/call",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  },
  {
    "id": "[id]",
    "kind": {
      "kind": "api",
      "node": 5,
      "before_signature": "async function runJob(id: string): Promise<void>",
      "after_signature": "async function runJob(ids: string[]): Promise<void>"
    },
    "provenance": {
      "source": "floe-hunks/api",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  },
  {
    "id": "[id]",
    "kind": {
      "kind": "api",
      "node": 2,
      "before_signature": null,
      "after_signature": "async function enqueueBatch(ids: string[]): Promise<void>"
    },
    "provenance": {
      "source": "floe-hunks/api",
      "version": "0.1.0",
      "pass_id": "hunks",
      "hash": "[hash]"
    }
  }
]
